# sap-agent-context

./: AGENTS.md  AGENT_FIRST_SPECIFICATION.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
docs/: agent-consumer-contract.md  bundle-quality-contract.md  completeness-matrix.md  content-curation-sampling.md  context-bundle-consumer-contract.md  context-structure.md  coverage-classification-model.md  coverage-heatmap.md  deep-domain-pack-template.md  deep-slice-retro-gate.md  domain-density-gates.md  field-atlas-integration.md  gap-register.md  identity-alias-relation-contract.md  jsonl-authoring-contract.md  jsonl-migration-boundary.md  jsonl-record-surface.md  local-runtime-index.md  material-etm-starter-scope.md  mccoy-fo-generator-v2-hook.md  next-slice-prioritization.md  public-readiness.md  retrieval-trust-boundary.md  runtime-index-status.md  sap-agent-context-merge-boundary.md  sap-context-ontology.md  sap-gui-eam-pm-starter-scope.md  sdp-pattern-adoption-ledger.md  typed-mccoy-consumer-contract.md  v0.2-coverage-gate.md  vision.md
examples/: answer-proof-examples.json  answer-proof-examples.md  clone-first-queries.json  clone-first-queries.md  deep-domain-pack-template.yaml  downstream-consumer-fixtures.json  downstream-consumer-fixtures.md  sap-gui-eam-pm-queries.json  sap-gui-eam-pm-queries.md
records/: apps.jsonl  claims.jsonl  fields.jsonl  relations.jsonl  roles.jsonl  sources.jsonl  tables.jsonl  workflows.jsonl
schema/: adversarial-query-corpus.yaml  claim.schema.json  completeness-matrix.yaml  consumer-fail-closed-fixtures.yaml  context-layout.yaml  coverage-classification-model.yaml  deep-slice-retro-gate.yaml  field-atlas-absorption-contract.yaml  fo-output-evaluation-fixtures.yaml  identity-alias-relation-contract.yaml  item.schema.json  jsonl-authoring-contract.yaml  knowledge-item.schema.yaml  relation.schema.json  runtime-embedding-config.schema.json  runtime-retrieval-fixtures.yaml  sap-agent-context-bundle.schema.yaml  sap-agent-context-v0.2-coverage.yaml  sap-fo-context-bundle.schema.yaml  semantic-model-fixtures.yaml  source.schema.json
scripts/: validate_repository.py
tests/: test_adversarial.py  test_agent_first_jsonl_export.py  test_answer_proof_examples.py  test_api_event_surface_bulk_pack.py  test_authorizations_pack.py  test_bundle_token_cache.py  test_clone_first_docs.py  test_completeness_matrix_cache.py  test_consumer_fail_closed_gates.py  test_content_curation_report.py  test_context_bundle_consumer_contract_docs.py  test_coverage_classification_model.py  test_deep_domain_pack_template.py  test_deep_slice_retro_gate.py  test_domain_density_completeness_profiles.py  test_domain_density_heatmap.py  (+55 more)
(+79 files in other folders)
